about page and move nav items around

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <!-- Styles -->
     <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/static/css/global.css" />
-    <title>Access</title>
+    <title>About</title>
     <!-- Meta -->
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
@@ -32,22 +32,22 @@
       <a href="/find-access/" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
-        <li class="active"><a href="/find-access/">Access</a></li>
-        <li><a href="/about/">About</a></li>
+        <li><a href="/find-access/">Access</a></li>
+        <li class="active"><a href="/about/">About</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
     <li><a href="/">Home</a></li>
-    <li class="active"><a href="/find-access/">Access</a></li>
-    <li><a href="/about/">About</a></li>
+    <li><a href="/find-access/">Access</a></li>
+    <li class="active"><a href="/about/">About</a></li>
   </ul>
 <!-- page content -->
     <div class="page-wapper text-white">
         <div class="container center">
-            <h3 class="title">Access Topgun09</h3>
-            <p class="header">Get access to the Topgun09 project</p>
+            <h3 class="title">About Topgun09</h3>
+            <p class="header flow-text">The Topgun09 project was started at the end of 2018 as an experimental student sharing platform.</p>
         </div>
     </div>
     
