--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
       <a href="/" class="brand-logo"><img class="nav-logo" src="/white-logo.png"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="/">Home</a></li>
-        <li><a href="/go/">Go</a></li>
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/find-access/">Access</a></li>
+        <li><a href="/about/">About</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="/">Home</a></li>
-    <li><a href="/">Go</a></li>
+    <li class="active"><a href="/">Home</a></li>
+    <li><a href="/find-access/">Access</a></li>
+    <li><a href="/about/">About</a></li>
   </ul>
 <!-- page content -->
     <div class="page-wapper text-white">
