added footer and quick links plus a start to the about page

--- a/index.html
+++ b/index.html
@@ -46,14 +46,31 @@
 <!-- page content -->
     <div class="page-wapper text-white">
         <div class="container center">
-            <h3 class="title">Topgun09 Project</h3>
+            <h3 class="title">Topgun09</h3>
             <p class="header">A space for student resources</p>
             <br />
             <a class="btn-large waves-effect waves-light blue darken-3" href="/find-access/">access the site</a>
         </div>
     </div>
-    
-
+    <div class="center quick-links">
+        <h6>Quick Access</h6>
+        <a href="/find-access/">Local IP</a> 
+        <span>|</span> 
+        <a href="/go/">HTTP Tunnel</a> 
+    </div>
+    <div class="info">
+    </div>
+    <footer id="footer">
+      <div class="container-fluid">
+        <br />
+        <div>
+            <a href="/"><img class="footer-logo" height="35px" src="/logo-small.png"></a>
+            <a class="footer-text" href="https://github.com/topgun09">© 2019</a>
+            <a class="light-footer-text" href="/old.php">Old Site</a>
+        </div>
+        <br />
+      </div>
+    </footer>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         var elems = document.querySelectorAll('.sidenav');
