added proxy url and working on api docs

--- a/find-access/index.html
+++ b/find-access/index.html
@@ -56,8 +56,8 @@
             <p class="left-align">To access the project, you must use one of the following methods:</p>
             <ol class="left-align">
                 <li>The local IP address (reccomended): <span id="local">Loading...</span></li>
-                <li>The main HTTP tunnel (for use outide school): <span id="tunnel">Loading...</span> <i class="material-icons tiny blue-grey-text text-lighten-2 info-icon modal-trigger" data-target="tunnel-info">info</i></li>
-                <li>A proxy (for use if the main tunnel is blocked): <a href="#">(not done)</a></li>
+                <li>The main HTTP tunnel (for use outside school): <span id="tunnel">Loading...</span> <i class="material-icons tiny blue-grey-text text-lighten-2 info-icon modal-trigger" data-target="tunnel-info">info</i></li>
+                <li>A proxy (for use if the main tunnel is blocked): <a href="https://topgun09.herokuapp.com">https://topgun09.herokuapp.com</a></li>
             </ol>
             <!-- tunnel info modal -->
             <div id="tunnel-info" class="modal">
@@ -104,6 +104,13 @@
                 </div>
                 <div id="tunnel-table">
                 </div>
+            <hr />
+            <h5>Hotlinking/Short links</h5>
+            <p class="center">To hotlink somthing inside of Topgun09, you can use <b>http://topgunurl.tk/&lt;whatever you want&gt;</b></p>
+            <hr />
+            <h5>API Stuff</h5>
+            <p class="center">Want to make somthing that uses Topgun09?</p>
+            <a href="/api-stuff/" class="waves-effect waves-light btn blue darken-3">Topgun09 APIs</a>
         </div>
         <br />
     </div>
