--- a/find-access/index.html
+++ b/find-access/index.html
@@ -88,7 +88,7 @@
                 <div id="local-table">
                 </div>
             <h4 style="margin-bottom:.5rem;">Tunnel Access</h4>
-            <p style="margin:0 0 .75rem 0;">Latest HTTP tunnel address</p>
+            <p style="margin:0 0 .75rem 0;">Latest HTTP tunnel address <i class="material-icons tiny blue-grey-text text-lighten-2 info-icon modal-trigger" data-target="tunnel-info">info</i></p>
                 <div id="loading-table2" class="center">
                   <div class="preloader-wrapper small active">
                     <div class="spinner-layer spinner-blue-only">
