--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h6>Quick Access</h6>
         <a href="/find-access/">Local IP</a> 
         <span>|</span> 
-        <a href="/go/">HTTP Tunnel</a> 
+        <a href="http://topgun09.000webhostapp.com/go/">HTTP Tunnel</a> 
     </div>
     <div class="info">
     </div>
