added to about page

--- a/about/index.html
+++ b/about/index.html
@@ -47,13 +47,36 @@
     <div class="page-wapper text-white">
         <div class="container center">
             <h3 class="title">About</h3>
-            <p class="header flow-text">The Topgun09 project was started in 2018 as an experimental student sharing platform.</p>
+            <p class="header flow-text">The Topgun09 project was started in 2018 as an experimental information sharing platform.</p>
+        </div>
+        <div class="info bg">
+            <div class="container center">
+                <h5>Related Projects</h5>
+                <div style="margin:1.5rem 0 1rem 0;">
+                    <a class="waves-effect waves-light btn blue darken-3" href="http://rhs-secrets.tk">Secrets of RHS</a>
+                </div>
+                <div style="margin:1.5rem 0 2rem 0;">
+                    <a class="waves-effect waves-light btn blue darken-3" href="https://removesw.tk">Remove SmoothWall</a>
+                </div>
+                <hr />
+                <h5>Other Links</h5>
+                <div style="margin-top:1.5rem;">
+                    <a class="waves-effect waves-light btn blue darken-3" href="https://github.com/topgun09">GitHub</a>
+                </div>
+                <br />
+                <div>
+                    <a class="waves-effect waves-light btn blue darken-3" href="https://www.youtube.com/channel/UCJGbZEJ258ir5PrDIIwUwcw">YouTube</a>
+                </div>
+                <hr />
+                <h5>Chrome Stuff</h5>
+                <div style="margin:1.5rem 0 3rem 0;">
+                    <a class="waves-effect waves-light btn blue darken-3" href="https://chrome.google.com/webstore/detail/auto-sign-in-for-lszebras/fobkddihflhjimpkcbpijgbgfchpknni">Auto Sign-In for SmoothWall</a>
+                </div>
+            </div>
         </div>
     </div>
     
-    
-    <div class="info">
-    </div>
+
     <footer id="footer">
       <div class="container-fluid">
         <br />
