added banner and seo stuff

--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <!-- Styles -->
     <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/static/css/global.css" />
-    <title>Home - Topgun09.tk</title>
+    <!-- Main Meta Tags -->
+    <title>Topgun09 Project</title>
+    <meta name="title" content="Topgun09 Project">
+    <meta name="description" content="A space for student resources, the Topgun09 project was started as an experimental information sharing platform.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://topgun09.tk/">
+    <meta property="og:title" content="Topgun09 Project">
+    <meta property="og:description" content="A space for student resources, the Topgun09 project was started as an experimental information sharing platform.">
+    <meta property="og:image" content="banner1.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://topgun09.tk/">
+    <meta property="twitter:title" content="Topgun09 Project">
+    <meta property="twitter:description" content="A space for student resources, the Topgun09 project was started as an experimental information sharing platform.">
+    <meta property="twitter:image" content="banner1.jpg">
     <!-- Meta -->
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
