--- a/api-stuff/index.html
+++ b/api-stuff/index.html
@@ -23,11 +23,11 @@
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         -webkit-font-smoothing: antialiased;
     }
-	img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
-	display: none!important;}
     </style>
 </head>
 <body>
+<div class="banner">
+    
   <nav>
     <div class="nav-wrapper blue darken-3">
       <a href="/" class="brand-logo"><img class="nav-logo" src="/white-logo.png"></a>
@@ -81,13 +81,13 @@
     <br />
   </div>
 </footer>
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.sidenav');
-        var instances = M.Sidenav.init(elems);
-      });
-    </script>
+  
+    <video autoplay loop muted class="banner__video" poster="/static/video/thumb/plexus.jpg">
+      <source src="https://benworld.net/static/video/plexus.mp4" type="video/mp4">
+    </video>
+  </div>
     <!-- JavaScript -->
     <script type="text/javascript" src="/static/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/static/js/global.js"></script>
 </body>
 </html>
