--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
                 
                 <h5>Related Projects</h5>
                 <div style="margin:1.5rem 0 1rem 0;">
-                    <a class="waves-effect waves-light btn blue darken-3" href="https://rhs-secrets.tk">Secrets of RHS</a>
+                    <a class="waves-effect waves-light btn blue darken-3" href="https://rhs-secrets.topgun09.rip">Secrets of RHS</a>
                 </div>
                 <div style="margin:1.5rem 0 2rem 0;">
                     <a class="waves-effect waves-light btn blue darken-3" href="http://removesw.tk">Remove SmoothWall</a>
