--- a/find-access/index.html
+++ b/find-access/index.html
@@ -108,7 +108,7 @@
                 </div>
             <hr />
             <h5>Hotlinking/Short links</h5>
-            <p class="center">To hotlink somthing inside of Topgun09, you can use <b>http://topgunurl.tk/&lt;whatever you want&gt;</b></p>
+            <p class="center">To hotlink somthing inside of Topgun09, you can use <b>http://t09url.tk/&lt;whatever you want&gt;</b></p>
             <hr />
             <h5>API Stuff</h5>
             <p class="center">Want to make somthing that uses Topgun09?</p>
