--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/static/css/global.css" />
     <!-- Main Meta Tags -->
-    <title>Topgun09 Project</title>
+    <title>The Topgun09 Project</title>
     <meta name="title" content="Topgun09 Project">
     <meta name="description" content="A space for student resources, the Topgun09 project was started as an experimental information sharing platform.">
 
