--- a/api-stuff/index.html
+++ b/api-stuff/index.html
@@ -56,7 +56,7 @@
         <div class="container center">
             <p class="left-align">Most of Topgun09's APIs output JSON. All requests are either GET or POST. Email contact@topgun09.tk about requesting an API with Topgun09 be made for your needs.</p>
             <hr />
-            <h4 style="margin-bottom:.5rem;">Topgun09.tk</h4>
+            <h4 style="margin-bottom:.5rem;">Topgun09.rip</h4>
             <p style="margin:0 0 .75rem 0;font-weight: 500;">The APIs for the current local IP and HTTP tunnel addresses:</p>
             <div>
                 <p>Returns the last known local IP address:</p>
@@ -66,7 +66,7 @@
             </div>
             <hr />
             <h5>Other APIs</h5>
-            <p class="center">The rest of Topgun09's APIs are in the docs section at <a href="https://topgunurl.tk/docs/">https://topgunurl.tk/docs/</a></p>
+            <p class="center">The rest of Topgun09's APIs are in the docs section at <a href="https://t09url.tk/docs/">https://topgunurl.tk/docs/</a></p>
             </div>
         <br />
     </div>
