--- a/api-stuff/index.html
+++ b/api-stuff/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="info bg">
         <div class="container center">
-            <p class="left-align">Most of Topgun09's APIs output JSON. All requests are either GET or POST. Email contact@topgun09.tk about requesting an API with Topgun09 be made for your needs.</p>
+            <p class="left-align">Most of Topgun09's APIs output JSON. All requests are either GET or POST. Email contact@topgun09.rip about requesting an API with Topgun09 be made for your needs.</p>
             <hr />
             <h4 style="margin-bottom:.5rem;">Topgun09.rip</h4>
             <p style="margin:0 0 .75rem 0;font-weight: 500;">The APIs for the current local IP and HTTP tunnel addresses:</p>
