--- a/find-access/index.html
+++ b/find-access/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="info bg">
         <div class="container center">
-            <p class="left-align">The Topgun09 project is hosted inside the RCSC network and for that reason, is not accessible outside of it without the use of "tunneling".</p>
+            <p class="left-align">Most of the Topgun09 project is hosted inside the RCSC network and for that reason, is not accessible outside of it without the use of "tunneling".</p>
             <p class="left-align">To access the project, you must use one of the following methods:</p>
             <ol class="left-align">
                 <li>The local IP address (reccomended): <span id="local">Loading...</span></li>
