--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://topgun09.tk/">
+    <meta property="og:url" content="https://topgun09.rip/">
     <meta property="og:title" content="Topgun09 Project">
     <meta property="og:description" content="A space for student resources, the Topgun09 project was started as an experimental information sharing platform.">
     <meta property="og:image" content="banner1.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://topgun09.tk/">
+    <meta property="twitter:url" content="https://topgun09.rip/">
     <meta property="twitter:title" content="Topgun09 Project">
     <meta property="twitter:description" content="A space for student resources, the Topgun09 project was started as an experimental information sharing platform.">
     <meta property="twitter:image" content="banner1.jpg">
