--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@
                     <a class="waves-effect waves-light btn blue darken-3" href="https://rhs-secrets.topgun09.rip">Secrets of RHS</a>
                 </div>
                 <div style="margin:1.5rem 0 2rem 0;">
-                    <a class="waves-effect waves-light btn blue darken-3" href="http://removesw.tk">Remove SmoothWall</a>
+                    <a class="waves-effect waves-light btn blue darken-3" href="http://removesw.000webhostapp.com">Remove SmoothWall</a>
                 </div>
                 <hr />
                 <h5>Other Links</h5>
